@@ -1552,22 +1552,22 @@ class Ui_MainWindow(object):
         _translate = QtCore.QCoreApplication.translate
         self.time_label.setText(_translate("MainWindow", "XX:XX:XX"))
         self.date_label.setText(_translate("MainWindow", "Vendredi 30 Septembre 2021"))
-        self.in_humidity_bt.setText(_translate("MainWindow", "Humidité : XXX %"))
+        self.in_humidity_bt.setText(_translate("MainWindow", "Humidité : No data"))
         self.in_label_1.setText(_translate("MainWindow", "Intérieur"))
-        self.in_label_3.setText(_translate("MainWindow", "XX° C / XX° C"))
-        self.in_temperature_label.setText(_translate("MainWindow", "XX° C"))
+        self.in_label_3.setText(_translate("MainWindow", "No data / No data"))
+        self.in_temperature_label.setText(_translate("MainWindow", "No data"))
         self.in_label_2.setText(_translate("MainWindow", "Min / Max"))
-        self.in_pressure_bt.setText(_translate("MainWindow", "Pression : XXXX hPa"))
-        self.out_label_3.setText(_translate("MainWindow", "XX° C / XX° C"))
+        self.in_pressure_bt.setText(_translate("MainWindow", "Pression : No data"))
+        self.out_label_3.setText(_translate("MainWindow", "No data / No data"))
         self.out_label_2.setText(_translate("MainWindow", "Min / Max"))
         self.out_label_1.setText(_translate("MainWindow", "Extérieur"))
-        self.out_humidity_bt.setText(_translate("MainWindow", "Humidité : XXX %"))
-        self.out_temperature_label.setText(_translate("MainWindow", "XX° C"))
-        self.out_pressure_bt.setText(_translate("MainWindow", "Pression : XXXX hPa"))
-        self.day_box.setTitle(_translate("MainWindow", "Vendredi 30 Septembre 2021"))
-        self.day_lb_1.setText(_translate("MainWindow", "77 ème jour de l’année"))
-        self.day_lb_3.setText(_translate("MainWindow", "Hiver"))
-        self.day_lb_2.setText(_translate("MainWindow", "Semaine 11"))
+        self.out_humidity_bt.setText(_translate("MainWindow", "Humidité : No data"))
+        self.out_temperature_label.setText(_translate("MainWindow", "No data"))
+        self.out_pressure_bt.setText(_translate("MainWindow", "Pression : No data"))
+        self.day_box.setTitle(_translate("MainWindow", "No data"))
+        self.day_lb_1.setText(_translate("MainWindow", "No data ème jour de l’année"))
+        self.day_lb_3.setText(_translate("MainWindow", "No data"))
+        self.day_lb_2.setText(_translate("MainWindow", "Semaine No data"))
         self.sun_box.setTitle(_translate("MainWindow", "Soleil"))
         self.sun_lb_1.setText(_translate("MainWindow", "Le Soleil se lève à No data et se couche à No data"))
         self.sun_lb_2.setText(_translate("MainWindow", "Durée d’ensoleillement: No data"))
