@@ -26,6 +26,8 @@
   * FIXED:
     * few corrections to make the weather station works on raspberry pi.
     * the size of all splitter handlers has been fixed.
+    * an issue with a section of the config file has been fixed.
+    * fixed an issue with data display.
 
 ### March 5 2021, Release version 0.10.1 ###
 
